--- a/style.css
+++ b/style.css
@@ -1,105 +1,149 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  .header {
-    background-color: #0070f3;
-    padding: 1rem;
-    text-align: center;
-  }
-  
-  .title {
-    margin: 0;
-    line-height: 1.5;
-    font-size: 2rem;
-    color: #ffffff;
-  }
-  
-  .main-content {
-    min-height: 100vh;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .description {
-    margin: 2rem 0;
-    line-height: 1.5;
-    font-size: 1rem;
-    color: #555;
-  }
-  
-  .grid {
-    display: flex;
-    align-items: wrap;
-    justify-content: space-between;
-    /*flex-wrap: wrap;*/
-    gap: 2rem;
-    max-width: 800px;
-  }
-  
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.header {
+  background-size: 700px;
+  background-image: url("CPSI_bg.jpg");
+  padding: 1rem;
+  -webkit-text-stroke: 1px black;
+  text-align: center;
+  font-family: "Helvetica";
+}
+
+.title {
+  margin: 0;
+  line-height: 1.5;
+  font-size: 2rem;
+  color: #ffffff;
+}
+
+.main-content {
+  min-height: 100vh;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.description {
+  margin: 2rem 0;
+  line-height: 1.5;
+  font-size: 1rem;
+  color: #555;
+}
+
+.jimmy {
+  color: transparent;
+}
+
+.jimmy::-webkit-file-upload-button {
+  visibility: hidden;
+}
+
+.jimmy::before {
+  content: "Select a file";
+  color: #fff;
+  display: inline-block;
+  background: #0070f3;
+  border: none;
+  padding: 2px 3px;
+  border-radius: 3px;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 12pt;
+}
+
+.jimmy:hover::before {
+  background-color: #0a2ac7;
+}
+
+.submit {
+  color: #fff;
+  display: inline-block;
+  border: none;
+  border-radius: 3px;
+  background: #0070f3;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 12pt;
+}
+
+.submit:hover {
+  background-color: #0a2ac7;
+}
+
+
+.grid {
+  display: flex;
+  align-items: wrap;
+  justify-content: space-between;
+  /*flex-wrap: wrap;*/
+  gap: 2rem;
+  max-width: 800px;
+}
+
+.card {
+  background-color: #ffffff;
+  text-align: center;
+  color: #333;
+  text-decoration: none;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+@media (min-width: 600px) {
   .card {
-    background-color: #ffffff;
-    padding: 2rem;
-    text-align: center;
-    color: #333;
-    text-decoration: none;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    transition: color 0.15s ease, border-color 0.15s ease;
-    width: 100%;
-    box-sizing: border-box;
+    width: 48%;
   }
-  
-  @media (min-width: 600px) {
-    .card {
-      width: 48%;
-    }
-  }
-  
-  .card:hover,
-  .card:focus,
-  .card:active {
-    color: #0070f3;
-    border-color: #0070f3;
-  }
-  
-  .card h2 {
-    margin: 0 0 1rem 0;
-    font-size: 1.5rem;
-    color: #333;
-  }
-  
-  .card p {
-    margin: 0;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #555;
-  }
-  
-  button {
-    background-color: #0070f3;
-    color: #ffffff;
-    padding: 1rem 2rem;
-    font-size: 1rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
+}
+
+.card:hover,
+.card:focus,
+.card:active {
+  color: #0070f3;
+  border-color: #0070f3;
+}
+
+.card h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.card p {
+  margin: 0;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #555;
+}
+
+button {
+  background-color: #0070f3;
+  color: #ffffff;
+  padding: 2px 3px;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #0a2ac7;
+}
