--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    /* padding: 0; */
     /*margin-top: 50px;*/
-     /* margin: 0px;
-      padding: 50px; */
+     margin: 0px; 
+      /* padding: 50px; */
     background: linear-gradient(to bottom right, #FF00FF, #0050a0,#87CEEB,#0050a0,#FF00FF);
-    /*text-align: center; */
+    text-align: center; 
     /* color: #333; /* Dark text color */
 }
 
