--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    /* padding: 0; */
-    /*margin-top: 50px;*/
-     margin: 0px; 
+    margin-top: 50px;
+    /*margin: 0px; */
       /* padding: 50px; */
     background: linear-gradient(to bottom right, #FF00FF, #0050a0,#87CEEB,#0050a0,#FF00FF);
     text-align: center; 
