--- a/style.css
+++ b/style.css
@@ -1,365 +1,229 @@
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0px;
-  padding: 0px;
-  background: linear-gradient(to bottom right, #FF00FF, #0050a0, #87CEEB, #0050a0, #FF00FF);
+dy {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to bottom right, #FF00FF, #0050a0,#87CEEB,#0050a0,#FF00FF);
+    text-align: center;
+    color: #333; /* Dark text color */
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .header {
-  background-size: 700px;
-  background-image: url("CPSI_bg.jpg");
-  padding: 1rem;
-  -webkit-text-stroke: 1px black;
-  text-align: center;
-  font-family: "Helvetica";
+    background-size: 700px;
+    background-image: url("CPSI_bg.jpg");
+    padding: 1rem;
+    -webkit-text-stroke: 1px black;
+    text-align: center;
+    font-family: "Helvetica";
 }
 
 .title {
-  margin: 0;
-  line-height: 1.5;
-  font-size: 2rem;
-  color: #ffffff;
+    margin: 0;
+    line-height: 1.5;
+    font-size: 2rem;
+    color: #ffffff;
 }
 
 .main-content {
-  min-height: 100vh;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    min-height: 100vh;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .description {
-  margin: 2rem 0;
-  line-height: 1.5;
-  font-size: 1rem;
-  color: #555;
+    margin: 2rem 0;
+    line-height: 1.5;
+    font-size: 1rem;
+    color: #555;
 }
 
 .jimmy {
-  color: transparent;
+    color: transparent;
 }
 
 .jimmy::-webkit-file-upload-button {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .jimmy::before {
-  content: "Select a file";
-  color: #fff;
-  display: inline-block;
-  background: #0070f3;
-  border: none;
-  padding: 2px 3px;
-  border-radius: 3px;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 12pt;
+    content: "Select a file";
+    color: #fff;
+    display: inline-block;
+    background: #0070f3;
+    border: none;
+    padding: 2px 3px;
+    border-radius: 3px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 12pt;
 }
 
 .jimmy:hover::before {
-  background-color: #0a2ac7;
+    background-color: #0a2ac7;
 }
 
 .submit {
-  color: #fff;
-  display: inline-block;
-  border: none;
-  border-radius: 3px;
-  background: #0070f3;
-  cursor: pointer;
-  font-weight: 600;
-  font-size: 12pt;
+    color: #fff;
+    display: inline-block;
+    border: none;
+    border-radius: 3px;
+    background: #0070f3;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 12pt;
 }
 
 .submit:hover {
-  background-color: #0a2ac7;
+    background-color: #0a2ac7;
+}
+
+.container {
+    max-width: 800px;
+    margin: 20px auto;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+
+h1, h2 {
+    text-align: center;
+}
+
+.button-container {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #0070e0;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #0050a0;
+}
+
+#myFile {
+    display: none;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #f0f0f0;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+label:hover {
+    background-color: #e0e0e0;
+}
+
+input[type="button"] {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #0070e0;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="button"]:hover {
+    background-color: #0050a0;
+}
+
+.drag-over-effect {
+    border: 2px dashed #0070e0;
+}
+
+.file-icon {
+    width: 50px;
+    height: 50px;
 }
 
 .grid {
-  display: flex;
-  align-items: wrap;
-  justify-content: space-between;
-  /* flex-wrap: wrap; */
-  gap: 2rem;
-  max-width: 800px;
+    display: flex;
+    align-items: wrap;
+    justify-content: space-between;
+    /*flex-wrap: wrap;*/
+    gap: 2rem;
+    max-width: 800px;
 }
 
 .card {
-  background-color: #ffffff;
-  text-align: center;
-  color: #333;
-  text-decoration: none;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 100%;
-  box-sizing: border-box;
+    background-color: #ffffff;
+    text-align: center;
+    color: #333;
+    text-decoration: none;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    transition: color 0.15s ease, border-color 0.15s ease;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 @media (min-width: 600px) {
-  .card {
-    width: 48%;
-  }
+    .card {
+        width: 48%;
+    }
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+    color: #0070f3;
+    border-color: #0070f3;
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-  color: #333;
+    margin: 0 0 1rem 0;
+    font-size: 1.5rem;
+    color: #333;
 }
 
 .card p {
-  margin: 0;
-  font-size: 1rem;
-  line-height: 1.5;
-  color: #555;
+    margin: 0;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #555;
 }
 
 button {
-  background-color: #0070f3;
-  color: #ffffff;
-  padding: 2px 3px;
-  font-size: 1.5rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: 600;
-  transition: background-color 0.3s ease;
+    background-color: #0070f3;
+    color: #ffffff;
+    padding: 2px 3px;
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
-  background-color: #0a2ac7;
-}
-
-header-section {
-  padding: 25px 0px;
-}
-
-.header-section h1 {
-  font-weight: 500;
-  font-size: 1.7rem;
-  text-transform: uppercase;
-  color: #707ea0;
-  margin: 0px;
-  margin-bottom: 8px;
-}
-
-.header-section p {
-  margin: 5px;
-  font-size: 0.95rem;
-  color: #707ea0;
-  padding: 25px 0px;
-}
-
-.drop-section {
-  min-height: 250px;
-  border: 1px dashed #a8b3e3;
-  background-image: linear-gradient(180deg, white, #f1f6ff);
-  margin: 5px 35px 35px 35px;
-  border-radius: 12px;
-  position: relative;
-}
-
-.drop-section div.col:first-child {
-  opacity: 1;
-  visibility: visible;
-  transition-duration: 0.2s;
-  transform: scale(1);
-  width: 200px;
-  margin: auto;
-}
-
-.drop-section div.col:last-child {
-  font-size: 40px;
-  font-weight: 700;
-  color: #c0cae1;
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  margin: auto;
-  width: 200px;
-  height: 55px;
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
-  transform: scale(0.6);
-  transition-duration: 0.2s;
-}
-
-/* we will use "drag-over-effect" class in js */
-.drag-over-effect div.col:first-child {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transform: scale(1.1);
-}
-
-.drag-over-effect div.col:last-child {
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1);
-}
-
-.drop-section .cloud-icon {
-  margin-top: 25px;
-  margin-bottom: 20px;
-}
-
-.drop-section span,
-.drop-section button {
-  display: block;
-  margin: auto;
-  color: #707ea0;
-  margin-bottom: 10px;
-}
-
-.drop-section button {
-  color: white;
-  background-color: #5874c6;
-  border: none;
-  outline: none;
-  padding: 7px 20px;
-  border-radius: 8px;
-  margin-top: 20px;
-  cursor: pointer;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-}
-
-.drop-section input {
-  display: none;
-}
-
-.list-section {
-  display: none;
-  text-align: left;
-  margin: 0px 35px;
-  padding-bottom: 20px;
-}
-
-.list-section .list-title {
-  font-size: 0.95rem;
-  color: #707ea0;
-}
-
-.list-section li {
-  display: flex;
-  margin: 15px 0px;
-  padding-top: 4px;
-  padding-bottom: 2px;
-  border-radius: 8px;
-  transition-duration: 0.2s;
-}
-
-.list-section li:hover {
-  box-shadow: #e3eaf9 0px 0px 4px 0px, #e3eaf9 0px 12px 16px 0px;
-}
-
-.list-section li .col {
-  flex: 0.1;
-}
-
-.list-section li .col:nth-child(1) {
-  flex: 0.15;
-  text-align: center;
-}
-
-.list-section li .col:nth-child(2) {
-  flex: 0.75;
-  text-align: left;
-  font-size: 0.9rem;
-  color: #3e4046;
-  padding: 8px 10px;
-}
-
-.list-section li .col:nth-child(2) div.name {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: 250px;
-  display: inline-block;
-}
-
-.list-section li .col .file-name span {
-  color: #707ea0;
-  float: right;
-}
-
-.list-section li .file-progress {
-  width: 100%;
-  height: 5px;
-  margin-top: 8px;
-  border-radius: 8px;
-  background-color: #dee6fd;
-}
-
-.list-section li .file-progress span {
-  display: block;
-  width: 0%;
-  height: 100%;
-  border-radius: 8px;
-  background-image: linear-gradient(120deg, #6b99fd, #9385ff);
-  transition-duration: 0.4s;
-}
-
-.list-section li .col .file-size {
-  font-size: 0.75rem;
-  margin-top: 3px;
-  color: #707ea0;
-}
-
-.list-section li .col svg.cross,
-.list-section li .col svg.tick {
-  fill: #8694d2;
-  background-color: #dee6fd;
-  position: relative;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-}
-
-.list-section li .col svg.tick {
-  fill: #50a156;
-  background-color: transparent;
-}
-
-.list-section li.complete span,
-.list-section li.complete .file-progress,
-.list-section li.complete svg.cross {
-  display: none;
-}
-
-.list-section li.in-prog .file-size,
-.list-section li.in-prog svg.tick {
-  display: none;
-}
-
-.container {
-  text-align: center;
-  width: 100%;
-  max-width: 500px;
-  min-height: 435px;
-  margin: auto;
-  background-color: white;
-  border-radius: 16px;
-  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    background-color: #0a2ac7;
 }
